[package]
name = "flipper"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/flipper"
description = "2D Rust game using the lightweight Macroquad game engine and the Bevy ECS"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[lib]
#crate-type = ["cdylib", "rlib"]

[dependencies]
bevy_ecs = "0.13"
futures = "0.3"
macroquad = { version = "0.4.5", features = ["audio"] }

[dev-dependencies]
float-cmp = "0.9.0"
