[package]
name = "flipper"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2021"
license = "BSD-3-Clause"
repository = "https://github.com/flipper"
description = "2D Rust game using the lightweight Macroquad game engine and the Bevy ECS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[test]]
# name = "macroquad_tests"
# path = "macroquad_tests/main.rs"
# harness = false

# [profile.release]
# codegen-units = 1
# incremental = true
# lto = true
# opt-level = "z"

[dependencies]
bevy_ecs = "0.15.0"
futures = "0.3.31"
macroquad = { version = "=0.4.13", features = ["audio"] }
# miniquad = "0.3.12"
miniquad = "0.4.2"
sapp-wasm = "=0.1.26"

[dev-dependencies]
float-cmp = "0.10.0"
