[package]
name = "flipper"
version = "0.1.0"
authors = ["Rodney Johnson <ask@rodneylab.com>"]
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/flipper"
# bevy_ecs v0.17.2 requires Rust 1.88.0
rust-version = "1.86.0"
description = "2D Rust game using the lightweight Macroquad game engine and the Bevy ECS"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [[test]]
# name = "macroquad_tests"
# path = "macroquad_tests/main.rs"
# harness = false

# [profile.release]
# codegen-units = 1
# incremental = true
# lto = true
# opt-level = "z"

[dependencies]
bevy_ecs = "0.17.2"
futures = "0.3.31"
macroquad = { version = "=0.4.12", features = ["audio"] }

[dev-dependencies]
float-cmp = "0.10.0"
